--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -1,13 +1,19 @@
 .PHONY		: 	all clean fclean re
 
-CC			=	gcc
-CFLAGS		= 	-Wall -Wextra -Werror
-
 NAME		=	libft.a
+
+#			GCC
+
+CC			=	cc
+CFLAGS		= 	-Wall -Wextra -Werror -MMD -MP -I $(INCLUDE)
+
+#			COMMON
 
 INCLUDE		=	include
 SRC_DIR		=	src/
-OBJ_DIR		=	obj/
+BUILD_DIR	=	obj/
+
+#			SRC
 
 SRC_FILES	= 	ft_isalpha 		\
 				ft_isdigit 		\
@@ -51,31 +57,31 @@ SRC_FILES	= 	ft_isalpha 		\
 				ft_lstdelone 	\
 				ft_lstclear 	\
 				ft_lstiter 		\
-				ft_lstmap
+				ft_lstmap		\
 
 SRC 		= 	$(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
-OBJ 		= 	$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_FILES)))
+OBJ 		= 	$(addprefix $(BUILD_DIR), $(addsuffix .o, $(SRC_FILES)))
+DEPS 		= 	$(addprefix $(BUILD_DIR), $(addsuffix .d, $(SRC_FILES)))
 
-RM			=	rm -rf
-LIBC		=	ar rc
-LIBR		= 	ranlib
+#			RULES
 
-all		: $(NAME)
+all				: $(NAME)
 
-$(NAME)	: $(OBJ_DIR) $(OBJ) $(INCLUDE)/libft.h
-		$(LIBC) $(NAME) $(OBJ)
-		$(LIBR) $(NAME)
+$(NAME)			: $(BUILD_DIR) $(OBJ)
+				ar -rcs $(NAME) $(OBJ)
 
-$(OBJ_DIR)	:
-			mkdir $(OBJ_DIR)
+$(BUILD_DIR)	:
+				mkdir -p $(BUILD_DIR)
 
-$(OBJ_DIR)%.o: $(SRC_DIR)%.c
-		$(CC) $(CFLAGS) -I $(INCLUDE) -c $< -o $@
+$(BUILD_DIR)%.o	: $(SRC_DIR)%.c
+				$(CC) $(CFLAGS) -c $< -o $@
 
-clean	:
-		$(RM) $(OBJ_DIR)
+-include $(DEPS)
 
-fclean	: clean
-		$(RM) $(NAME)
+clean			:
+				rm -rf $(BUILD_DIR)
 
-re		: fclean all
+fclean			: clean
+				rm -f $(NAME)
+
+re				: fclean all
