--- a/libft/get_next_line/Makefile
+++ b/libft/get_next_line/Makefile
@@ -1,39 +1,45 @@
 .PHONY		: 	all clean fclean re
 
-CC			=	gcc
-CFLAGS		= 	-Wall -Wextra -Werror
-
 NAME		=	libgnl.a
 
-INCLUDE		=	include
+#			GCC
+
+CC			=	cc
+CFLAGS		= 	-Wall -Wextra -Werror -MMD -MP -I $(INCLUDE)
+
+#			COMMON
+
+BUILD_DIR	=	.build/
 SRC_DIR		=	src/
-OBJ_DIR		=	obj/
+INCLUDE		=	include/
+
+#			SRC
 
 SRC_FILES	= 	get_next_line
 
 SRC 		= 	$(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
-OBJ 		= 	$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_FILES)))
+OBJ 		= 	$(addprefix $(BUILD_DIR), $(addsuffix .o, $(SRC_FILES)))
+DEPS 		= 	$(addprefix $(BUILD_DIR), $(addsuffix .d, $(SRC_FILES)))
 
-RM			=	rm -rf
-LIBC		=	ar rc
-LIBR		= 	ranlib
+#			RULES
 
-all		: $(NAME)
+all				: $(NAME)
 
-$(NAME)	: $(OBJ_DIR) $(OBJ) $(INCLUDE)/get_next_line.h $(INCLUDE)/libft.h
-		$(LIBC) $(NAME) $(OBJ)
-		$(LIBR) $(NAME)
+$(NAME)			: $(BUILD_DIR) $(OBJ)
+				ar -rcs $(NAME) $(OBJ)
 
-$(OBJ_DIR)	:
-			mkdir $(OBJ_DIR)
+$(BUILD_DIR)	:
+				mkdir -p $(BUILD_DIR)
 
-$(OBJ_DIR)%.o: $(SRC_DIR)%.c
-		$(CC) $(CFLAGS) -I $(INCLUDE) -c $< -o $@
+$(BUILD_DIR)%.o	: $(SRC_DIR)%.c
+				$(CC) $(CFLAGS) -c $< -o $@
 
-clean	:
-		$(RM) $(OBJ_DIR)
+-include $(DEPS)
 
-fclean	: clean
-		$(RM) $(NAME)
+clean			:
+				rm -rf $(BUILD_DIR)
 
-re		: fclean all
+fclean			: clean
+				rm -f $(NAME)
+
+re				: fclean all
